# Clove

./: CMakeLists.txt  README.md  conanfile.py  conanfile.txt
.github/workflows/: analysis.yml  compile.yml  test.yml
bulb/: CMakeLists.txt
bulb/components/membrane/: CMakeLists.txt
bulb/components/membrane/include/Membrane/: Application.hpp  EditorSubSystem.hpp  EditorVFS.inl  FileSystemHelpers.hpp  Messages.hpp  ReflectionHelper.hpp  ReflectionHelpers.hpp  RuntimeSubSystem.hpp
bulb/components/membrane/source/: Application.cpp  EditorSubSystem.cpp  EditorVFS.cpp  FileSystemHelpers.cpp  ReflectionHelper.cpp  ReflectionHelpers.cpp  RuntimeSubSystem.cpp
bulb/source/: DragDropData.cs  EditorApp.xaml  EditorApp.xaml.cs
bulb/source/ViewModels/: ComponentViewModel.cs  EditorSessionViewModel.cs  EntityViewModel.cs  SceneViewModel.cs  SubSystemViewModel.cs  TypeViewModel.cs
bulb/source/ViewModels/FileExplorer/: DirectoryItemViewModel.cs  FileExplorerViewModel.cs  FileViewModel.cs  FolderViewModel.cs
bulb/source/Views/: MainWindow.xaml  MainWindow.xaml.cs  TypeView.xaml  TypeView.xaml.cs  Viewport.xaml  Viewport.xaml.cs
bulb/source/Views/FileExplorer/: BreadcrumbItem.xaml  BreadcrumbItem.xaml.cs  DirectoryTreeItem.xaml  DirectoryTreeItem.xaml.cs  DirectoryView.xaml  DirectoryView.xaml.cs  DirectoryViewItem.xaml  DirectoryViewItem.xaml.cs  FileExplorer.xaml  FileExplorer.xaml.cs
clove/: CMakeLists.txt
clove/components/core/graphics/: CMakeLists.txt
clove/components/core/graphics/include/Clove/Graphics/: Descriptor.hpp  GhaBuffer.hpp  GhaComputeCommandBuffer.hpp  GhaComputeQueue.hpp  GhaDescriptorSet.hpp  GhaFactory.hpp  GhaGraphicsCommandBuffer.hpp  GhaGraphicsQueue.hpp  GhaImage.hpp  GhaImageView.hpp  GhaSwapchain.hpp  GhaTransferCommandBuffer.hpp  GhaTransferQueue.hpp  PipelineObject.hpp  Resource.hpp
clove/components/core/graphics/source/: Gha.cpp
clove/components/core/graphics/source/Metal/: MetalComputeCommandBuffer.mm  MetalComputeQueue.mm  MetalDescriptorPool.mm  MetalDescriptorSet.mm  MetalDevice.mm  MetalFactory.mm  MetalGraphicsCommandBuffer.mm  MetalGraphicsQueue.mm  MetalImage.mm  MetalImageView.mm  MetalSwapchain.mm  MetalTransferCommandBuffer.mm  MetalTransferQueue.mm
clove/components/core/graphics/source/Validation/: ValidationCommandBuffer.cpp
clove/components/core/graphics/source/Vulkan/: MemoryAllocator.cpp  VulkanCommandBuffer.cpp  VulkanComputeCommandBuffer.cpp  VulkanComputeQueue.cpp  VulkanDescriptor.cpp  VulkanDescriptorSet.cpp  VulkanFactory.cpp  VulkanGha.cpp  VulkanGraphicsCommandBuffer.cpp  VulkanGraphicsQueue.cpp  VulkanImage.cpp  VulkanImageView.cpp  VulkanResource.cpp  VulkanSwapchain.cpp  VulkanTransferCommandBuffer.cpp  VulkanTransferQueue.cpp
clove/components/core/platform/include/Clove/Platform/: Window.hpp
clove/components/core/platform/source/Linux/: LinuxWindow.cpp
clove/components/core/platform/source/Mac/: MacWindow.mm
clove/components/core/platform/source/Windows/: WindowsWindow.cpp
clove/components/systems/reflection/source/: Reflection.cpp
clove/components/systems/serialisation/source/: Yaml.cpp
clove/components/systems/serialisation/tests/: NodeTests.cpp
clove/components/utilities/: CMakeLists.txt
clove/components/utilities/expected/tests/: ExpectedTests.cpp
clove/components/utilities/guid/: CMakeLists.txt
clove/components/utilities/guid/include/Clove/: Guid.hpp  Guid.inl
clove/components/utilities/guid/source/: Guid.cpp
clove/components/utilities/guid/tests/: CMakeLists.txt  GuidTests.cpp
clove/components/utilities/log/source/: Log.cpp
clove/components/utilities/maths/tests/: CMakeLists.txt  MatrixTests.cpp  QuaternionTests.cpp  VectorTests.cpp
clove/include/Clove/: Application.hpp  Application.inl  ReflectionAttributes.hpp  ReflectionCommon.hpp
clove/include/Clove/Components/: PointLightComponent.hpp  TransformComponent.hpp
clove/include/Clove/FileSystem/: AssetManager.hpp  AssetManager.inl  AssetPtr.hpp  AssetPtr.inl  FileSystemVFS.hpp  FileSystemVFS.inl  VirtualFileSystem.hpp
clove/include/Clove/Rendering/: HighDefinitionRenderer.hpp  RenderTarget.hpp  Renderer.hpp  RenderingConstants.hpp  ShaderBufferTypes.hpp  SwapchainRenderTarget.hpp  Vertex.hpp
clove/include/Clove/Rendering/RenderGraph/: RenderGraph.hpp  RgComputePass.hpp  RgFrameCache.hpp  RgRenderPass.hpp
clove/include/Clove/SubSystems/: AudioSubSystem.hpp  PhysicsSubSystem.hpp
clove/source/: Application.cpp  ModelLoader.cpp  ReflectionCommon.cpp
clove/source/Components/: PointLightComponent.cpp  StaticModelComponent.cpp
clove/source/FileSystem/: AssetManager.cpp  FileSystemVFS.cpp
clove/source/Rendering/: HighDefinitionRenderer.cpp  Material.cpp  RenderingHelpers.cpp  SwapchainRenderTarget.cpp
clove/source/Rendering/RenderGraph/: RenderGraph.cpp  RgComputePass.cpp  RgFrameCache.cpp  RgImage.cpp  RgRenderPass.cpp
clove/source/Rendering/Renderables/: Font.cpp  Mesh.cpp
clove/source/Shaders/: Common.glsl  ComputeLightGridCompute.glsl  Constants.glsl  ForwardPassPixel.glsl  ForwardPassVert.glsl  PointShadowDepthsPixel.glsl  SceneDepthVert.glsl  SkinningCompute.glsl
clove/source/SubSystems/: AudioSubSystem.cpp  PhysicsSubSystem.cpp  RenderSubSystem.cpp  TransformSubSystem.cpp
clove/tests/: AssetPtrTests.cpp  CMakeLists.txt  FileSystemVFSTests.cpp
membrane/: CMakeLists.txt
membrane/include/Membrane/: EditorVFS.hpp  ReflectionHelpers.hpp
membrane/managed/: CMakeLists.txt
membrane/managed/source/: Application.cs  EntityComponentSystem.cs  FileSystem.cs  FileSystemHelpers.cs  Log.cs  Reflection.cs  ReflectionHelpers.cs
membrane/native/: CMakeLists.txt
membrane/native/include/Membrane/: Application.hpp  EditorSubSystem.hpp  EntityComponentSystem.hpp  Export.hpp  FileSystemHelpers.hpp  Log.hpp  Reflection.hpp  ReflectionHelpers.hpp
membrane/native/source/: Application.cpp  EditorSubSystem.cpp  EditorVFS.cpp  EntityComponentSystem.cpp  FileSystem.cpp  FileSystemHelpers.cpp  Log.cpp  Reflection.cpp  ReflectionHelpers.cpp
membrane/source/: Application.cpp  FileSystemHelpers.cpp
(+51 files in other folders)
